src/c_avi.ebnf
<Program> ::= <ExternalDeclaration> { <ExternalDeclaration> }

<ExternalDeclaration> ::= <Type> <Identifier> <Declarations>

<Declarations> ::= <FunctionDefinition> | <VariableDeclarationGlobal> ;

<VariableDeclarationGlobal> ::= [ = <Expression> ] { , <Identifier> [ = <Expression> ] }

<FunctionDefinition> ::= ( <ParameterListOpt> ) <CompoundStatement>

<ParameterListOpt> ::= <ParameterList> | epsilon

<ParameterList> ::= <ParameterDeclaration> { , <ParameterDeclaration> }

<ParameterDeclaration> ::= <Type> <Identifier>

<CompoundStatement> ::= `{` <StatementList> `}`

<StatementList> ::= { <Statement> }

<Statement> ::= | <CompoundStatement>
                | <DeclareStatement> ;
                | <Identifier> <AssignOrFuncCall> ;
                | <IfStatement>
                | <WhileStatement>
                | <ReturnStatement> ;
                | <PrintStatement> ;
                | <PrintfStatement> ;
                | epsilon

<AssignOrFuncCall> ::= <AssignmentStatement> | <FunctionCallStatement>

<AssignmentStatement> ::= = <Expression>

<FunctionCallStatement> ::= ( <ArgumentListOpt> )

<ArgumentListOpt> ::= <ArgumentList> | epsilon

<ArgumentList> ::= <Expression> { , <Expression> }

<InitDeclarator> ::= <Identifier> [ = <Expression> ]

<DeclareStatement> ::= <Type> <InitDeclarator> { , <InitDeclarator> }

<IfStatement> ::= if ( <Expression> ) <CompoundStatement> [ else <CompoundStatement> ]

<WhileStatement> ::= while ( <Expression> ) <CompoundStatement>

<Expression> ::= <ArithmeticExpression> <RelationalPrime>

<RelationalPrime> ::= < <ArithmeticExpression> <RelationalPrime>
                    | <= <ArithmeticExpression> <RelationalPrime>
                    | > <ArithmeticExpression> <RelationalPrime>
                    | >= <ArithmeticExpression> <RelationalPrime>
                    | == <ArithmeticExpression> <RelationalPrime>
                    | != <ArithmeticExpression> <RelationalPrime>
                    | epsilon

<ArithmeticExpression> := <Term> <ArithmeticPrime>

<ArithmeticPrime> ::= + <Term> <ArithmeticPrime>
                    | - <Term> <ArithmeticPrime>
                    | epsilon

<Term> ::= <Factor> <TermPrime>

<TermPrime> ::= * <Factor> <TermPrime>
              | / <Factor> <TermPrime>
              | epsilon

<Factor> ::= <Identifier> <EpsilonOrFuncCall> | <Number> | <CharLiteral> | ( <Expression> )

<EpsilonOrFuncCall> ::= epsilon | <FunctionCallStatement>

<ReturnStatement> ::= return [ <Expression> ]

<PrintStatement> ::= print ( <ArgumentListOpt> )

<PrintfStatement> ::= printf ( <Expression> [ , <ArgumentList> ] )

<Identifier> ::= <Alpha> { <Alpha> | <Digit> }

<Number> ::= <Digit> { <Digit> }                    

<CharLiteral> ::= ' <Alpha> '

<Type> ::= int | char | void

<Alpha> ::= A|B|C|D|E|F|G|H|I|J|K|L|M|N|O|P|Q|R|S|T|U|V|W|X|Y|Z|a|b|c|d|e|f|g|h|i|j|k|l|m|n|o|p|q|r|s|t|u|v|w|x|y|z

<Digit> ::= 0|1|2|3|4|5|6|7|8|9
